:bug: Fixed bug nav visible on home

--- a/app/assets/styles/map/map.styl
+++ b/app/assets/styles/map/map.styl
@@ -76,6 +76,7 @@
     #US, #FR, #RU, #BR
       transition: fill .5s ease-out
       cursor pointer
+      position relative
     
       &.animate
         animation-name pulse
